--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@trevoreyre/autocomplete-vue": "^2.0.3",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
+    "vue-cookies": "^1.6.1",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
