--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.8",
     "@trevoreyre/autocomplete-vue": "^2.0.3",
+    "axios": "^0.19.2",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
     "vue-cookies": "^1.6.1",
