--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@trevoreyre/autocomplete-vue": "^2.0.3",
     "axios": "^0.19.2",
     "core-js": "^3.3.2",
+    "js-cookie": "^2.2.1",
     "vue": "^2.6.10",
     "vue-cookies": "^1.6.1",
     "vue-router": "^3.1.3"
